Removing the connect screen

--- a/web_assets/samples.css
+++ b/web_assets/samples.css
@@ -112,3 +112,16 @@ table{
 table td {
 
 }
+
+.beam-processing {
+    -webkit-animation: rotation 2s infinite linear;
+}
+
+@-webkit-keyframes rotation {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(359deg);
+    }
+}
